refactor: rename project from shift-scheduler-service to shyft
- Updated module name in go.mod and all import paths to reflect the new project name.
- Changed application name in configuration files and environment variables.
- Modified base path in Swagger documentation and API routes.
- Removed old Docker Compose files and created a new consolidated docker-compose.yml for the updated project structure.
- Adjusted health check response message to include service status.
- Deleted obsolete Postman collection file related to the previous project name.

--- a/config/sample.env.yaml
+++ b/config/sample.env.yaml
@@ -10,7 +10,7 @@ app:
   mode: "dev"
   port: "9097"
   version: "1.0.0"
-  name: "shift-scheduler-service"
+  name: "shyft"
 
 # ---------------------------------------------------------------------
 # JWT
