--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,10 @@
 version: "1.0"
-name: shift-scheduler-service
+name: shyft
 
 services:
-  web:
-    container_name: api
-    build:
-      context: ./
-      dockerfile: docker/Dockerfile.DelveHotReload
-    ports:
-      - "5000:5000"
-      - "5555:5555"
-      - "7070:7070"
-      - "40000:40000"
-    environment:
-      - PORT=5000
-    security_opt:
-      - "seccomp:unconfined"
-    cap_add:
-      - SYS_PTRACE
-    depends_on:
-      - postgesql
-      - redis
-    restart: always
-    volumes:
-      - ./:/app
-    networks:
-      - web_api
-
   redis:
-    image: redis:6-alpine
-    container_name: api_redis
+    image: redis:6.0.9-alpine
+    container_name: shyft_redis
     ports:
       - "6379:6379"
     restart: always
@@ -38,7 +13,7 @@ services:
 
   postgesql:
     image: postgres:12-alpine
-    container_name: api_postgesql
+    container_name: shyft_postgesql
     ports:
       - "5432:5432"
     restart: always
@@ -52,8 +27,9 @@ services:
       - web_api
 
   prometheus:
-    container_name: prometheus_container
+    container_name: shyft_prometheus
     image: prom/prometheus
+    restart: always
     volumes:
       - ./docker/monitoring/prometheus-local.yml:/etc/prometheus/prometheus.yml:Z
     command:
@@ -68,7 +44,8 @@ services:
       - web_api
 
   node_exporter:
-    container_name: node_exporter_container
+    container_name: shyft_node_exporter
+    restart: always
     image: prom/node-exporter
     ports:
       - '9101:9100'
@@ -76,15 +53,44 @@ services:
       - web_api
 
   grafana:
-    container_name: grafana_container
+    container_name: shyft_grafana
+    restart: always
     image: grafana/grafana
     ports:
       - '3000:3000'
     networks:
       - web_api
 
+  minio:
+    image: minio/minio:latest
+    ports:
+      - '9000:9000'
+    container_name: shyft_minio
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    command: server /data
+    networks:
+      - web_api
+
+  mc:
+    image: minio/mc:latest
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc config host rm local;
+      /usr/bin/mc config host add --quiet --api s3v4 local http://myminio:9000 minio minio123;
+      /usr/bin/mc rb --force local/somebucketname1/;
+      /usr/bin/mc mb --quiet local/somebucketname1/;
+      /usr/bin/mc policy set public local/somebucketname1;
+      "
+    networks:
+      - web_api
+
   jaeger:
-    container_name: jaeger_container
+    container_name: shyft_jaeger
+    restart: always
     image: jaegertracing/all-in-one:1.21
     environment:
       - COLLECTOR_ZIPKIN_HTTP_PORT=9411
@@ -97,8 +103,8 @@ services:
       - 14268:14268
       - 14250:14250
       - 9411:9411
-  networks:
-    - web_api
+    networks:
+      - web_api
 
 networks:
   web_api:
